tests/machine/x/go/cross_join.error
Error on line 0: run error: exit status 1
# command-line-arguments
../../../tests/machine/x/go/cross_join.go:13:17: undefined: Customer
../../../tests/machine/x/go/cross_join.go:16:5: undefined: Customer
../../../tests/machine/x/go/cross_join.go:19:5: undefined: Customer
../../../tests/machine/x/go/cross_join.go:23:14: undefined: Order
../../../tests/machine/x/go/cross_join.go:27:5: undefined: Order
../../../tests/machine/x/go/cross_join.go:31:5: undefined: Order
../../../tests/machine/x/go/cross_join.go:36:21: undefined: Result
../../../tests/machine/x/go/cross_join.go:37:16: undefined: Result
../../../tests/machine/x/go/cross_join.go:40:31: undefined: Result

1: //go:build ignore
